--- a/package.json
+++ b/package.json
@@ -11,8 +11,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.2.4",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "astro": "^5.16.2",
+    "dflip": "^1.0.0",
+    "flipbook-js": "^1.1.1",
+    "jquery": "^3.7.1",
+    "page-flip": "^2.0.7",
+    "pdfjs-dist": "^5.4.394",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-pageflip": "^2.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
